Alot of changes done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,31 @@
         android:roundIcon="@mipmap/college_companion"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".calculator_cgpa"/>
-        <activity android:name=".AttendanceOptions"/>
-        <activity android:name=".AttendanceManager"/>
-        <activity android:name=".InputSubject"/>
-        <activity android:name=".ReportCard"/>
-        <activity android:name=".Transistions"/>
+        <activity android:name=".attendance_ld"></activity>
+        <activity android:name=".attendance_co" />
+        <activity android:name=".attendance_oj" />
+        <activity android:name=".attendance_dms" />
+        <activity android:name=".attendance_iwt" />
+        <activity android:name=".attendance_ds" />
+        <activity android:name=".subject_card" />
+        <activity android:name=".calculator_cgpa" />
+        <activity android:name=".AttendanceOptions" />
+        <activity android:name=".AttendanceManager" />
+        <activity android:name=".InputSubject" />
+        <activity android:name=".ReportCard" />
+        <activity android:name=".Transistions" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
